# Chess

./: .clang-format  .gitignore  Bishop.cpp  Bishop.h  Board.cpp  CMakeLists.txt  Doxyfile  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Queen.cpp  Root.cpp  main.cpp
include/: Bishop.h  Board.h  Coordinate.h  Game.h  Handler.h  King.h  Knight.h  Move.h  OwnershipValidationHandler.h  Pawn.h  Piece.h  PieceOwnershipHandler.h  Queen.h  Rook.h  Root.h  SourcePieceHandler.h  SpecialMoveHandler.h
src/: Bishop.cpp  Board.cpp  Game.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Root.cpp  SourcePieceHandler.cpp  SpecialMoveHandler.cpp
